name:                miso-app
version:             0.1.0.0
synopsis:            First miso app
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable miso-app
  main-is:             Main.hs
  build-depends:       base, miso, containers
  default-language:    Haskell2010
